Page categories demo, Uranus moon pages, Earth and Galaxy pages expanded, minor edits

--- a/pages/earth.html
+++ b/pages/earth.html
@@ -14,11 +14,11 @@ link: earth
                         Earth is a <a href="planet.html">planet</a> in the <a href="solar-system.html">Solar System</a>.
                         It is the third planet from the <a href="sun.html">Sun</a> and the biggest of the terrestrial planets.
                         It is the only place that is known to harbor life.
-                        Earth has one natural satellite - <a href="moon.html">Moon</a>.
+                        Earth has one <a href="natural-satellite.html">natural satellite</a> - <a href="moon.html">Moon</a>.
                     </p>
                     <p class="paragraph">
-                        It contains liquid water on 71% of the surface and the remaining 29% is land.
-                        The crust is made up of several tectonic plates that create the various features on Earth's surface - mountain ranges, volcanoes, trenches and cause earthquakes.
+                        Earth contains liquid water on 71% of the surface and the remaining 29% is land.
+                        The crust is made up of several tectonic plates that create the various features on Earth's surface - mountain ranges, volcanoes, trenches, and cause earthquakes.
                         The liquid outer core of the Earth is responsible for the magnetosphere, which protects from solar and cosmic radiation.
                     </p>
                     <p class="paragraph">
@@ -26,6 +26,12 @@ link: earth
                         Carbon dioxide and other greenhouse gases capture part of the energy from the Sun.
                         Those gases increase every year due to human activity, resulting in rising average temperatures.
                         Water vapors form clouds in the athmosphere as a part of the water cycle.
+                    </p>
+                    <p class="paragraph">
+                        The 1950s marked the beginning of space exploration.
+                        The first object to enter Earth orbit was Sputnik 1, which started the Space Race between the USSR and the USA.
+                        Since then, the two superpowers were competing in the field of space technology for the purposes of national security and defense, but later went on to explore Earth and space for scientific reasons.
+                        Today, many artificial satellites orbit Earth, including space stations like the International Space Station, a collaborative project between multiple countries.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="FormationAndDevelopment">Formation and development</h2>
@@ -100,9 +106,32 @@ link: earth
                     Earth is a nearly spherical body with an average diameter of 12,742 km. 
                     This makes Earth the fifth biggest planet in the Solar System. 
                     Altitude on Earth is measured relatively to the sea level of 0 m. 
-                    The lowest point is Challenger Deep - 10,925 m and the highest is mount Everest - 8,848 m. 
                     Due to Earth's rotation, the lands around the Equator are farther from the cener than the poles.
                 </p>
+                <div class="articlediv">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/diagrams/earth-interior.png" alt="Interior of the Earth">
+                        <p class="caption">Interior of the Earth</p>
+                    </div>
+                    <h3 class="paragraphsubheader" id="Interior">Interior</h3>
+                    <p class="paragraph">
+                        The crust is the outermost geologic layer of Earth, separated from the mantle by the Mohorovičić discontinuity.
+                        It is  divided into continental and oceanic depending on the surface. 
+                        While the continental crust contains more low-density igneous rocks like granite, oceanic crust has more basalt.
+                        Both are covered by a layer of sedimentray rocks, which are accumulated and compressed sediments.
+                        Igneous and sedimentary rocks can change into metamorphic rocks through high pressure or temperatures.
+                    </p>
+                    <p class="paragraph">
+                        The mantle is a dense layer of mafic (iron and magnesium-rich) silicates in the interior of the Earth.
+                        It is divided into upper, consisting mostly of olivine and pyroxene and lower mantle, consisting of magnesium perovskite.
+                        Within the upper mantle is the asthenosphere, which is the mechanically weak layer below the lithosphere.
+                    </p>
+                    <p class="paragraph">
+                        The innermost layer is the core of Earth. 
+                        It is split into a liquid outer core and a solid inner core.
+                        The core consists of iron and nickel and is responsible for the magnetosphere around Earth.
+                    </p>
+                </div>
                 <div class="articlediv">
                     <h3 class="paragraphsubheader" id="Surface">Surface</h3>
                     <p class="paragraph">
@@ -114,31 +143,20 @@ link: earth
                     <p class="paragraph">
                         The land takes up only 29.2% of the surface. 
                         It consists of four main landmasses and many smaller islands.
-                        The landmasses - Afroeurasia, America, Antarctica and Australia make up the continents.
+                        The landmasses - Afroeurasia, America, Antarctica and Australia make up the continents that differ in number according to different definitions.
+                        Most commonly there are seven continents - Afroeurasia is split into Asia, Africa, and Europe, while America is dividen in two - North and South America.
                         Just like the oceans, many landforms shape up the land surface - mountains, plateaus, plains, volcanoes and many more.
+                    </p>
+                    <p class="paragraph">
+                        The tallest peak on Earth above the mean ocean level is Mount Everest within the Himalayas, Asia, at 8,848 m above sea level.
+                        However, the tallest mountain from its base is Mauna Kea in Hawai'i - 9,930 m in total.
+                        The lowest point is not well known due to the ocean's challenging exploration, but it is believed to be Challenger Deep within the Mariana Trench, around 10,936 m below sea level.
                     </p>
                     <div class="captionbox center">
                         <img class="articleimage" src="../assets/images/maps/earth-satellite-map.png" alt="Map of Earth">
                         <p class="caption">True color satellite map of Earth (oceans are filled with a single color)</p>
                     </div>
                 </div>
-                <h3 class="paragraphsubheader" id="Interior">Interior</h3>
-                <p class="paragraph">
-                    The crust is the outermost geologic layer of Earth, separated from the mantle by the Mohorovičić discontinuity.
-                    It is  divided into continental and oceanic depending on the surface. 
-                    While the continental crust contains more low-density igneous rocks like granite, oceanic crust has more basalt.
-                    Both are covered by a layer of sedimentray rocks, which are accumulated and compressed sediments.
-                    Igneous and sedimentary rocks can change into metamorphic rocks through high pressure or temperatures.
-                </p>
-                <p class="paragraph">
-                    The mantle is a dense layer of rock in the interior of the Earth.
-                    It is divided into upper, consisting mostly of olivine and pyroxene and lower mantle, consisting of magnesium perovskite.
-                </p>
-                <p class="paragraph">
-                    The innermost layer is the core of Earth. 
-                    It is split into a liquid outer core and a solid inner core.
-                    The core consists of iron and nickel and is responsible for the magnetosphere around Earth.
-                </p>
                 <div class="articlediv">
                     <div class="captionbox right h600">
                         <img class="articleimage" src="../assets/images/diagrams/atmosphere-layers.png" alt="Athmosphere layers">
@@ -199,7 +217,7 @@ link: earth
                     <h2 class="paragraphheader" id="Moon">Moon</h2>
                     <p class="readmore">Main article: <a href="moon.html">Moon</a></p>
                     <p class="paragraph">
-                        The Moon is the only <a href="natural-satellite.html">natural satellite</a> orbiting Earth. 
+                        The Moon is the only natural satellite orbiting Earth. 
                         It is the fifth largest satellite in the Solar System and is the largest relative to it's parent planet. 
                         The Moon has no magnetic field, a hydrosphere, or a significant athmosphere.
                         The lunar gravitational attraction causes tides on Earth.
@@ -207,6 +225,56 @@ link: earth
                     <p class="paragraph">
                         It is also the only natural astronomic body other than Earth that has been visited by people during NASA's Apollo mission. 
                         The Artemis mission is a follow-up to Apollo, with the uncrewed Artemis 1 already successful.
+                    </p>
+                </div>
+                <h2 class="paragraphsubheader" id="SpaceExploration">Space exploration</h2>
+                <h3 class="paragraphsubheader" id="SpaceRace">Space Race</h3>
+                <p class="paragraph">
+                    October 4 1957 marked the start of space exploration, when the Soviet Union launched Sputnik 1, the world’s first artificial satellite.
+                    The metal sphere orbited Earth every 96 minutes, transmitting simple radio signals.
+                    Sputnik’s success surprised the the United States, forcing them to accelerate their own space program and starting the Space Race between the USSR and the USA.
+                    Sputnik 2 was the next step, this time carrying the first living being into orbit: a stray dog named Laika.
+                    Though Laika did not survive the mission, her flight proved that a living organism could endure spaceflight.
+                    The United States responded with its first satellite, Explorer 1, launched the next year and discovered the Van Allen radiation belt surrounding Earth.
+                    As part of the second Korabl-Sputnik mission, two more dogs - Belka and Strelka, were the first to return alive from orbit in outer space.
+                </p>
+                <p class="paragraph">
+                    In 1961, after three more missions with dogs on board, Soviet cosmonaut Yuri Gagarin became the first human in space and to orbit Earth aboard Vostok 1.
+                    The spaceflight consisted of a single orbit after which Gagarin would descend with a parachute landing in Saratov Oblast, Russian SSR.
+                    Five more Vostok spacecrafts were sent in orbit, each with one crewman.
+                    In 1962, as part of Project Mercury, John Glenn becomes the first American to orbit Earth aboard Friendship 7, following Alan Sheppard's suborbital flight the previous year aboard Freedom 7.
+                    USSR's Voskhod programme included two crewed missions, sending five people in total, with Alexei Leonov performing the first spacewalk during the Voskhod 2 mission. 
+                    Meanwhile, the American Gemini programme found success in performing space rendezvous (Gemini 6 and 7) and docking (Gemini 8), previously attempted during Vostok 3 and 4
+                </p>
+                <p class="paragraph">
+                    The two powers were preparing to send people on the Moon.
+                    The Soviet Union was again ahead with the Luna and Zond programmes.
+                    Eventually, after an unfortunate setback and several gradual test missions, the USA succeeded and sent people on the moon with Apollo 11.
+                    So far, USA has been the only country to send people there.
+                </p>
+                <p class="paragraph">
+                    In 1971, the Soviet Union begins the first space station - Salyut 1.
+                    The American response to the Salyut and later Almaz series was Skylab in 1973.
+                    The space race reached a conclusion in 1975, when the two countries conducted a joint Apollo-Soyuz project where the two countries exchanged their own crew members in space.
+                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/spacecrafts/iss.jpg" alt="ISS">
+                        <p class="caption">The ISS in 2010</p>
+                    </div>
+                    <h3 class="paragraphsubheader" id="ISSAndSpaceTelescopes">ISS and space telescopes</h3>
+                    <p class="paragraph">
+                        In 1986, the Soviet Union launched the Mir programme to construct a modular space station.
+                        The USA considered making their own modular space station, and the USSR was looking forward to a second Mir station.
+                        After the fall of the Soviet Union and the end of the Cold War, however, the two sides (now Russia succeeding the USSR) announced that they will construct the International Space Station.
+                        The ISS stands as the most prominent symbol of Earth orbit exploration and diplomacy.
+                        Continuously inhabited since 2000, the ISS is a collaborative effort involving NASA, Roscosmos, ESA, JAXA, and CSA, among others.
+                        It serves as a unique laboratory for studying the effects of long-duration spaceflight on the human body, testing new technologies, and conducting experiments in biology, physics, and materials science.
+                    </p>
+                    <p class="paragraph">
+                        Beyond the ISS, Earth orbit is home to a diverse array of satellites and observatories.
+                        Space telescopes like Hubble and James Webb have revolutionized our understanding of the Solar System and the <a href="universe.html">universe</a>.
+                        Meanwhile, Earth observation satellites like Sentinel 1-6 monitor climate change, track natural disasters, and provide data essential for agriculture, urban planning, and environmental protection.
                     </p>
                 </div>
                 <h2 id="ExternalLinks">External links</h2>
@@ -218,3 +286,6 @@ link: earth
                         <a href="https://en.wikipedia.org/wiki/Earth">https://en.wikipedia.org/wiki/Earth</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
