--- a/pages/galaxy.html
+++ b/pages/galaxy.html
@@ -6,20 +6,54 @@ link: galaxy
 ---
 
                 <div class="articlediv">
-                    <!--<div class="captionbox right" style="width:242px">
-                        <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun" width="240" height="240">
-                        <p class="caption">The Sun is a G-type star</p>
-                    </div>-->
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/galaxies/andromeda.jpg" alt="Andromeda">
+                        <p class="caption">The Andromeda Galaxy, the closest galaxy to the Milky Way</p>
+                    </div>
                     <p class="paragraph">
-                        A galaxy is a system consisting of gas, dust, dark matter, <a href="star.html">stars</a>, star remnants and other celestial bodies bound together by gravity.
+                        A galaxy is a large system consisting of gas, dust, dark matter, <a href="star.html">stars</a>, star remnants and other celestial bodies bound together by gravity.
                         The name "galaxy" is derived from the Greek word for "milky" (γαλαξίας), refering to the Milky Way galaxy.
-                        Dark matter comprises the majority of the mass of a galaxy and only a few per cent of the mass is visible.
+                        Galaxies come in a variety of shapes and sizes, ranging from complex spirals and simple ellipsoids to irregular clusters, formed by gravitational interactions with other galaxies.
+                        The smallest galaxies, called dwarf galaxies, may contain only a few million stars, while the largest can have trillions.
+                        Only a few percent of the mass is visible, with the remaining unexplained part allocated to dark matter without which galaxies would not have enough mass to form.
                         Supermassive black holes are the common centerpiece of a galaxy.
                     </p>
                 </div>
-                <!--<h2 class="paragraphheader" id="Formation">Formation</h2>
+                <h2 class="paragraphheader" id="Formation">Formation</h2>
                 <p class="paragraph">
-                </p>-->
+                    Galaxies began forming shortly after the Big Bang.
+                    The early <a href="universe.html">universe</a> was filled with hot, dense gas, mostly hydrogen and helium.
+                    Over time, gravity pulled this gas together, forming the first stars and, eventually, the first galaxies.
+                    As galaxies evolved, they grew by merging with one another.
+                    Within these collisions, though violent in appearance, stars rarely collided due to the vast distances between them.
+                    Instead, the gravitational interactions reshape the galaxies, often triggering bursts of new star formation.
+                </p>
+                <p class="paragraph">
+                    One of the unsolved questions in physics is how galaxies formed and how they are positioned within the universe, when the matter that is observed is not enough for gravity to pull enough gas together.
+                    The missing component is refered to as dark matter.
+                    If it's a real substance, it doesn’t emit, absorb, or reflect light, but its gravitational effects are evident in the way galaxies form and behave.
+                </p>
+                <h2 class="paragraphheader" id="Classification">Classification</h2>
+                <p class="paragraph">
+                    There are several types of galaxies based on their shape.
+                    Edwin Hubble classifies them in three categories - spiral, elliptical, and irregular.
+                    Spiral galaxies are flat, rotating disks with spiral arms winding outward from a central bulge.
+                    They are rich in gas and dust and feature older stars within the bulge and younger, hotter stars in their arms.
+                    The Milky Way and the Andromeda Galaxy are examples of spiral galaxies.
+                </p>
+                <p class="paragraph">
+                    Elliptical Galaxies appear smooth, featureless, and elliptical in shape, ranging from nearly spherical to highly elongated.
+                    Some of them have a significantly elongated, lenticular shape.
+                    These galaxies have mostly older, redder stars with little gas or dust.
+                    Star formation is minimal.
+                    An example is the Messier 87 (M87) Galaxy.
+                </p>
+                <p class="paragraph">
+                    Irregular Galaxies have no defined shape, instead being chaotic and asymmetrical.
+                    Like the spiral galaxies they have high amounts of gas and dust and intense star formation.
+                    However, their irregular shape is often the result of galactic collisions or interactions.
+                    Two examples of irregular galaxies are the Large and Small Magellanic Clouds.
+                </p>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
