--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -258,3 +258,6 @@ link: jupiter
                         <a href="https://www.space.com/37005-jupiter-fuzzy-core-nasa-juno.html">https://www.space.com/37005-jupiter-fuzzy-core-nasa-juno.html</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
