--- a/pages/mars.html
+++ b/pages/mars.html
@@ -111,6 +111,10 @@ link: mars
                     </p>
                 </div>
                 <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/features/hellas-planitia.jpg" alt="Hellas Planitia">
+                        <p class="caption">Hellas Planitia seen by Viking</p>
+                    </div>
                     <p class="paragraph">
                         The Martian surface is heavily cratered, but most craters are located in the south.
                         The north contains interconnected low-lying plains like Arcadia Planitia, Acidalia Planitia and Utopia Planitia.
@@ -129,7 +133,7 @@ link: mars
                     </p>
                 </div>
                 <div class="mapdiv">
-                    <div class="captionbox center" style="width:1026px;">
+                    <div class="captionbox" style="width:1026px;">
                         <img class="articleimage" src="../assets/images/maps/mars-topography-map.jpg" alt="Topography map of Mars" width="1024" height="585.6" usemap="#marstop">
                         <p class="caption">Clickable topographic map of Mars - Mars Global Surveyor</p>
                         <map name="marstop">
@@ -291,3 +295,6 @@ link: mars
                         <a href="https://en.wikipedia.org/wiki/Mars">https://en.wikipedia.org/wiki/Mars</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
