--- a/pages/mercury.html
+++ b/pages/mercury.html
@@ -126,3 +126,6 @@ link: mercury
                         <a href="https://en.wikipedia.org/wiki/Mercury_(planet)">https://en.wikipedia.org/wiki/Mercury_(planet)</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
