--- a/pages/miranda.html
+++ b/pages/miranda.html
@@ -14,27 +14,32 @@ link: miranda
                         Miranda is the smallest of the round <a href="natural-satellite.html">moons</a> of <a href="uranus.html">Uranus</a>.
                         It was discovered by Gerard Kuiper in 1948 and is named after a character from Shakespeare's play The Tempest.
                         It is unique from <a href="satellites-of-uranus.html">the other four</a> mostly cratered ones, as it features vast regions of upwelled terrain (coronae), as well as extremely large scarps on it's surface like the 10-15 km deep Verona Rupes.
+                        These features are likely the result of a period of significant tidal heating.
                         The only mission to date to visit Miranda was Voyager 2.
                     </p>
                 </div>
-                <h2 class="paragraphheader" id="Name">Name</h2>
-                <p class="paragraph">
-                    Miranda is named after a character from William Shakespeare's play The Tempest.
-                    This follows the theme of moons of Uranus bearing names of characters from the works of Shakespeare and Alexander Pope.
-                    However, John Herschel named the other four specifically after fairies. 
-                </p>
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
                 <p class="paragraph">
                     Miranda was discovered on 16 February 1948 by Gerard Kuiper at the McDonald Observatory in Texas.
                     It was the first satellite of Uranus discovered in nearly 100 years.
                 </p>
+                <h2 class="paragraphheader" id="Name">Name</h2>
+                <p class="paragraph">
+                    Miranda is named after a character from William Shakespeare's play The Tempest.
+                    This follows the theme of moons of Uranus bearing names of characters from the works of Shakespeare and Alexander Pope.
+                    However, John Herschel named the previous four specifically after fairies. 
+                </p>
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
                     Miranda's orbit has a semi-major axis of 129,000 km, making it the closest of the five major moons to Uranus.
-                    It is the 15th moon between Mab and <a href="ariel.html">Ariel</a>.
+                    It is the 15th moon in order, between Mab and <a href="ariel.html">Ariel</a>.
                     Like the other round moons, it is tidally locked to Uranus.
                     Among the regular satellites, it has the greatest inclination of 4.4°, which is unusually high for a moon this close to a <a href="planet.html">planet</a>.
                     It has a low eccentricity of 0.0014.
+                </p>
+                <p class="paragraph">
+                    It is suggested that Miranda was in a 3:1 orbital resonance with Umbriel at one point, which resulted in significant tidal heating.
+                    A possible 5:3 resonance with Ariel would have also contributed to a lesser degree.
                 </p>
                 <h2 class="paragraphheader" id="PhysicalCharacteristics">Physical characteristics</h2>
                 <h3 class="paragraphsubheader" id="Size">Size</h3>
