--- a/pages/moon.html
+++ b/pages/moon.html
@@ -204,7 +204,7 @@ link: moon
                     </div>
                     <h3 class="paragraphsubheader" id="LunaProgram">Luna program</h3>
                     <p class="paragraph">
-                        After the beginning of the Cold War, the Soviet Union began the development of rockets, known as launch systems, to launch objects outside the <a href="earth.html">Earth</a>.
+                        After the beginning of the Cold War, the Soviet Union began the development of rockets to launch objects outside the <a href="earth.html">Earth</a>.
                         The launch of Sputnik 1, the first artificial satellite, marked the beginning of the Space Race between the USA and the USSR.
                         One of the objectives of the race was to send people to the Moon, as it is the closest celestial object to the Earth.
                         The Soviet Union began it's Luna program.
