--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -151,6 +151,7 @@ link: natural-satellite
                     <p class="paragraph">
                         29 moons are known to orbit <a href="uranus.html">Uranus</a>, all but two named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
                         The biggest five are <a href="titania.html">Titania</a>, <a href="oberon.html">Oberon</a>, <a href="umbriel.html">Umbriel</a>, <a href="ariel.html">Ariel</a>, and <a href="miranda.html">Miranda</a>.
+                        Miranda and Ariel show signs of significant geologic activity.
                     </p>
                     <div class="imgwrapper">
                         <div class="captionbox center h120">
