--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -147,15 +147,21 @@ link: neptune
                         Since then eight more moons were discovered in 2002, 2003, 2013 and 2021.
                     </p>
                 </div>
-                <h2 class="paragraphheader" id="Exploration">Exploration</h2>
-                <p class="paragraph">
-                   Voyager 2 was the only spacecraft to visit Neptune.
-                   After a flyby of Saturn and Uranus, Neptune was the next potential objet to be visited.
-                   Voyager 2 reached Neptune on 25 August 1989.
-                   The spacecraft observed Neptune's atmosphere, rings, magnetosphere and moons. 
-                   Since the visit, Voyager 2 has left the Solar System.
-                   Multiple new missions were proposed, but none are yet approved.
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/spacecrafts/voyager.png" alt="Voyager">
+                        <p class="caption">A model of the two Voyager spacecrafts. Voyager 2 made a flyby of Neptune.</p>
+                    </div>
+                    <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+                    <p class="paragraph">
+                       Voyager 2 was the only spacecraft to visit Neptune.
+                       After a flyby of Saturn and Uranus, Neptune was the next potential objet to be visited.
+                       Voyager 2 reached Neptune on 25 August 1989.
+                       The spacecraft observed Neptune's atmosphere, rings, magnetosphere and moons. 
+                       Since the visit, Voyager 2 has left the Solar System.
+                       Multiple new missions were proposed, but none are yet approved.
+                    </p>
+                </div>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
@@ -165,3 +171,6 @@ link: neptune
                         <a href="https://en.wikipedia.org/wiki/Neptune">https://en.wikipedia.org/wiki/Neptune</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
