--- a/pages/planet.html
+++ b/pages/planet.html
@@ -24,8 +24,8 @@ link: planet
                     The <a href="natural-satellite.html">satellites</a> of planets like Earth's <a href="moon.html">Moon</a>, or the Jovian, Saturnian, Uranian and Neptunian moons were also considered planets for some time.
                 </p>
                 <p class="paragraph">
-                    The same can be said for the <a href="asteroid.html">asteroids</a> in the <a href="asteroid-belt.html">Asteroid Belt</a>, or objects like Pluto. 
-                    The biggest asteroid - <a href="ceres.html">Ceres</a>, the <a href="tno.html">Trans-Neptunian objects</a> <a href="pluto.html">Pluto</a>, <a href="eris.html">Eris</a>, <a href="haumea.html">Haumea</a>, <a href="makemake.html">Makemake</a> and many more are called <a href="dwarf-planet.html">dwarf planets</a>. 
+                    The same can be said for the <a href="asteroid.html">asteroids</a> in the <a href="asteroid-belt.html">Asteroid Belt</a>, or objects like <a href="pluto.html">Pluto</a>. 
+                    The biggest asteroid - <a href="ceres.html">Ceres</a>, the <a href="tno.html">Trans-Neptunian objects</a> Pluto, <a href="eris.html">Eris</a>, <a href="haumea.html">Haumea</a>, <a href="makemake.html">Makemake</a> and many more are called <a href="dwarf-planet.html">dwarf planets</a>. 
                     The difference is that unlike regular planets, dwarf planets do not make up the majority of the mass in their orbit.
                 </p>
                 <p class="paragraph">
@@ -214,3 +214,6 @@ link: planet
                         <a href="https://en.wikipedia.org/wiki/Planet">https://en.wikipedia.org/wiki/Planet</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
