--- a/pages/satellites-of-uranus.html
+++ b/pages/satellites-of-uranus.html
@@ -30,7 +30,7 @@ link: satellites-of-uranus
                     <h2 class="paragraphheader" id="Names">Names</h2>
                     <p class="paragraph">
                         The one to give the first four moons names was John Herschel, son of William Herschel.
-                        His names were supposed to be those of magical spirits from English literature - Oberon and Titania are named after fairies from William Shakespeare's A Midsummer Night's Dream, and Ariel and Umbriel got names from the respectie slph and gnome from Alexander Pope's The Rape of the Lock 
+                        His names were supposed to be those of magical spirits from English literature - Oberon and Titania are named after fairies from William Shakespeare's A Midsummer Night's Dream, and Ariel and Umbriel got names from the respectie sylph and gnome from Alexander Pope's The Rape of the Lock 
                         However, the naming convention was broadened to any charater from those authors.
                         Belinda is the only other satellite with a name from Pope's play.
                         Outer moons receive their names from The Tempest, with the exception of the prograde Margaret, which got its name from Much Ado About Nothing.
@@ -63,6 +63,7 @@ link: satellites-of-uranus
                         All of the moons are relatively dark, with Umbriel being the darkest.
                         They are made of rock and ice (except Miranda, which is mostly ice) and feature craters, canyons and scarps.
                         Miranda is unique, as it features extremely large scarps on it's surface like the 20 km wide and 10-15 km deep Verona Rupes.
+                        Apart from Miranda, Ariel also shows signs of significant geologic activity.
                     </p>
                     <div class="imgwrapper">
                         <div class="captionbox center h180">
@@ -111,7 +112,7 @@ link: satellites-of-uranus
                     Voyager 2 was the only spacecraft to visit Uranus in 1986.
                     It observed the five round satellites and discovered ten smaller ones,
                     A number of missions to Uranus have been proposed by ESA, NASA, and CNSA.
-                    Such missions are of low priority and are not focused on any of the satellites.
+                    Such missions are of low priority and are not focused on any of the satellites in particular, although the launch of recent high priority missions by NASA leave the Uranus Orbiter and Probe as the next Flagship mission.
                 </p>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
