--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -26,7 +26,8 @@ link: saturn
                         Within the rings are also numerous tiny moonlets.
                     </p>
                     <p class="paragraph">
-                        Four missions visited the Saturn system, the latest of which was Cassini-Huygens.
+                        Four missions visited the Saturn system, starting with the flybys of Pioneer 11 and the two Voyagers.
+                        The latest mission was Cassini-Huygens, which orbited around the planet for several years before its deliberate destruction within the atmosphere of Saturn.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Name">Name</h2>
@@ -243,28 +244,35 @@ link: saturn
                     William Herschel discovered the last two round moons - Mimas and Enceladus.
                     The first irregularly shaped satellite to be discovered was Hyperion and the first irregularly orbiting was Phoebe.
                 </p>
-                <h2 class="paragraphheader" id="Exploration">Exploration</h2>
-                <p class="paragraph">
-                    NASA's first mission to Saturn was Pioneer 11, which made the a flyby of Saturn in September 1979, when it passed within 20,000 km of the planet.
-                    Images were taken of the planet and a few of its moons, at a resolution too low to discern any surface detail.
-                    The spacecraft also studied the planet's rings, revealing the thin F-ring.
-                </p>
-                <p class="paragraph">
-                    The Voyager 1 probe managed to send back the first high-resolution images of the planet, its rings and satellites.
-                    Surface features of various moons were seen for the first time.
-                    Voyager 1 performed a close flyby of Titan, studying the atmosphere of the moon.
-                    The thickness of the atmosphere prevented surface details to be revealed.
-                    A year later Voyager 2 passed the Saturn system, collecting further information about the planet.
-                    Both missions discovered new satellites around Saturn.
-                </p>
-                <p class="paragraph">
-                    ESA joined NASA to launch the Cassini-Huygens spacecraft.
-                    Cassini completed two flybys around Titan before releasing the Huygens lander.
-                    Discoveries during the mission were evidences of liquid water beneath the Enceladus surface and geysers, hydrocarbon lakes on Titan, and new satellites of Saturn.
-                </p>
-                <p class="paragraph">
-                    Proposed missions include a Saturn entry probe, Dragonfly, which is a probe that will explore Titan, and a few candidates for a mission to search life on Enceladus.
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/spacecrafts/cassini-orbiter.png" alt="Cassini orbiter">
+                        <p class="caption">A model of the Cassini orbiter</p>
+                    </div>
+                    <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+                    <p class="paragraph">
+                        NASA's first mission to Saturn was Pioneer 11, which made the a flyby of Saturn in September 1979, when it passed within 20,000 km of the planet.
+                        Images were taken of the planet and a few of its moons, at a resolution too low to discern any surface detail.
+                        The spacecraft also studied the planet's rings, revealing the thin F-ring.
+                    </p>
+                    <p class="paragraph">
+                        The Voyager 1 probe managed to send back the first high-resolution images of the planet, its rings and satellites.
+                        Surface features of various moons were seen for the first time.
+                        Voyager 1 performed a close flyby of Titan, studying the atmosphere of the moon.
+                        The thickness of the atmosphere prevented surface details to be revealed.
+                        A year later Voyager 2 passed the Saturn system, collecting further information about the planet.
+                        Both missions discovered new satellites around Saturn.
+                    </p>
+                    <p class="paragraph">
+                        ESA joined NASA to launch the Cassini-Huygens spacecraft.
+                        Cassini completed two flybys around Titan before releasing the Huygens lander.
+                        Discoveries during the mission were evidences of liquid water beneath the Enceladus surface and geysers, hydrocarbon lakes on Titan, and new satellites of Saturn.
+                        The mission ended with its deliberate destruction within the atmosphere of Saturn in a similar manner to Jupiter's Galileo.
+                    </p>
+                    <p class="paragraph">
+                        Proposed missions include a Saturn entry probe, Dragonfly, which is a probe that will explore Titan, and a few candidates for a mission to search for life on Enceladus.
+                    </p>
+                </div>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
@@ -274,3 +282,6 @@ link: saturn
                         <a href="https://en.wikipedia.org/wiki/Saturn">https://en.wikipedia.org/wiki/Saturn</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
