--- a/pages/star.html
+++ b/pages/star.html
@@ -37,28 +37,34 @@ link: star
                 <p class="paragraph">
                     Significant advancements in the understanding of stars were made in the twentieth century, in particular their compositons, star classification of spectral types and evolution of stars.
                 </p>
-                <h2 class="paragraphheader" id="LifeCycle">Life cycle</h2>
-                <p class="paragraph">
-                    Stars form in vast clouds of gas and dust called nebulae.
-                    Gravity pulls the gas together, forming a protostar. As the protostar grows, nuclear fusion begins, and a star is born.
-                    Usually, a protoplanetary disc forms around protostars, which would eventually create other smaller objects around the star.
-                </p>
-                <p class="paragraph">
-                    Most of a star’s life is spent in the main sequence phase, where it fuses hydrogen into helium.
-                    During that time, stars emit gases known as stellar winds.
-                </p>
-                <p class="paragraph">
-                    After exhausting their hydrogen in their cores, smaller stars begin to fuse helium.
-                    They expand into red giants, which shed their outer layers into outer space.
-                    This process continues until depleting its helium core, leaving behind a white dwarf.
-                    Most of the star's mass before the post-main sequence events is dispersed, creating a planetary nebula.
-                    This new material eventually creates a new generation of stars.
-                </p>
-                <p class="paragraph">
-                    Massive stars of 9 M☉ turn first into blue and later red supergiants.
-                    These stars begin to fuse heavier elements - helium, carbon, and so on, until they reach iron, which does not emit energy on fusion.
-                    After their cores become too heavy to sustain their own weights, they collapse and after electron capture (protons and electrons collide to produce neutrons and neutrinos) they burst in violent supernovae, leaving behind neutron stars or black holes.
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/stars/betelgeuse.jpg" alt="Betelgeuse">
+                        <p class="caption">The red supergiant Betelgeuse, imaged by ALMA. <a href="https://commons.wikimedia.org/wiki/File:Betelgeuse_captured_by_ALMA.jpg">Source</a></p>
+                    </div>
+                    <h2 class="paragraphheader" id="LifeCycle">Life cycle</h2>
+                    <p class="paragraph">
+                        Stars form in vast clouds of gas and dust called nebulae.
+                        Gravity pulls the gas together, forming a protostar. As the protostar grows, nuclear fusion begins, and a star is born.
+                        Usually, a protoplanetary disc forms around protostars, which would eventually create other smaller objects around the star.
+                    </p>
+                    <p class="paragraph">
+                        Most of a star’s life is spent in the main sequence phase, where it fuses hydrogen into helium.
+                        During that time, stars emit gases known as stellar winds.
+                    </p>
+                    <p class="paragraph">
+                        After exhausting their hydrogen in their cores, smaller stars begin to fuse helium.
+                        They expand into red giants, which shed their outer layers into outer space.
+                        This process continues until depleting its helium core, leaving behind a white dwarf.
+                        Most of the star's mass before the post-main sequence events is dispersed, creating a planetary nebula.
+                        This new material eventually creates a new generation of stars.
+                    </p>
+                    <p class="paragraph">
+                        Massive stars of 9 M☉ turn first into blue and later red supergiants.
+                        These stars begin to fuse heavier elements - helium, carbon, and so on, until they reach iron, which does not emit energy on fusion.
+                        After their cores become too heavy to sustain their own weights, they collapse and after electron capture (protons and electrons collide to produce neutrons and neutrinos) they burst in violent supernovae, leaving behind neutron stars or black holes.
+                    </p>
+                </div>
                 <h2 class="paragraphheader" id="Classification">Classification</h2>
                 <p class="paragraph">
                     Stars are classified based on their spectral characteristics. 
