--- a/pages/triton.html
+++ b/pages/triton.html
@@ -26,20 +26,20 @@ link: triton
                         There is still a lot to be discovered, so several missions were proposed to revisit Triton.
                     </p>
                 </div>
+                <h2 class="paragraphheader" id="Discovery">Discovery</h2>
+                <p class="paragraph">
+                    Triton was discovered in 1846 by British astronomer William Lassell, just 17 days after the discovery of Neptune.
+                    The discovery was relatively fast thanks to John Herschel writing to Lassell about the newly discovered planet, advising him to search for a satellite.
+                </p>
                 <h2 class="paragraphheader" id="Name">Name</h2>
                 <p class="paragraph">
                     Triton is named after the Greek sea god Triton, son of Poseidon, who is the Greek equivalent of the Roman Neptune.
                     The name was first proposed by Camille Flammarion in his 1880 book Astronomie Populaire, but was officially adopted many decades later.
                     For a time, it was just refered to as "the <a href="satellites-of-neptune.html">satellite of Neptune</a>", as it was the only known until the discovery of Nereid in 1949.
                 </p>
-                <h2 class="paragraphheader" id="Discovery">Discovery</h2>
-                <p class="paragraph">
-                    Triton was discovered in 1846 by British astronomer William Lassell, just 17 days after the discovery of Neptune.
-                    The discovery was relatively fast thanks to John Herschel writing to Lassell about the newly discovered planet, advising him to search for a satellite.
-                </p>
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
-                    Triton is the only planetary moon that orbits in retrograde, making it an irregular moon of Neptune.
+                    Triton is unique in that it is the only planetary moon that orbits in retrograde, making it an irregular moon of Neptune.
                     The orbital period is 5.88 <a href="earth.html">Earth</a> days.
                     Triton's inclination is -23°, also unusual for a round satellite.
                     The orbital eccentricity is nearly zero, nearly a perfect circle.
