--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -123,6 +123,7 @@ link: uranus
                         All of the moons are relatively dark, with Umbriel being the darkest.
                         They are made of rock and ice and feature craters, canyons and scarps.
                         Miranda is unique, as it features extremely large scarps on it's surface like Verona Rupes.
+                        Apart from Miranda, Ariel also shows signs of significant geologic activity.
                     </p>
                     <p class="paragraph">
                         The other 24 moons are divided into inner and irregular.
@@ -133,13 +134,21 @@ link: uranus
                         Sycorax is the largest moon of this group.
                     </p>
                 </div>
-                <h2 class="paragraphheader" id="Exploration">Exploration</h2>
-                <p class="paragraph">
-                    Voyager 2 was the only spacecraft to visit Uranus in 1986.
-                    During its flyby, it studied the atmosphere, weather and magnetosphere of Uranus, the five biggest moons and discovered ten smaller ones.
-                    A number of missions to Uranus have been proposed.
-                    Such propositions include several missions by ESA (MUSE, ODINUS and Uranus Pathfinder), NASA (Oceanus and NASA Uranus orbiter and probe) and CNSA (Tianwen-4)
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/spacecrafts/voyager.png" alt="Voyager">
+                        <p class="caption">A model of the two Voyager spacecrafts. Voyager 2 made a flyby of Uranus.</p>
+                    </div>
+                    <h2 class="paragraphheader" id="Exploration">Exploration</h2>
+                    <p class="paragraph">
+                        Voyager 2 was the only spacecraft to visit Uranus in 1986.
+                        During its flyby, it studied the atmosphere, weather and magnetosphere of Uranus, the five biggest moons and discovered ten smaller ones.
+                        A number of missions to Uranus have been proposed.
+                        Such propositions include several missions by ESA (MUSE, ODINUS and Uranus Pathfinder), NASA (Oceanus and NASA Uranus orbiter and probe) and CNSA (Tianwen-4)
+                        After the launch of Mars 2020 and Europa Clipper, the Uranus Orbiter and Probe was selected as a NASA Flagship mission of the highest priority.
+                        The Chinese Tianwen-4 on the other hand is planned as a Jupiter and <a href="callisto.html">Callisto</a> orbiter mission, and Uranus is considered for an extended mission.
+                    </p>
+                </div>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
@@ -149,3 +158,6 @@ link: uranus
                         <a href="https://en.wikipedia.org/wiki/Uranus">https://en.wikipedia.org/wiki/Uranus</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
