--- a/pages/venus.html
+++ b/pages/venus.html
@@ -12,14 +12,15 @@ link: venus
                     </div>
                     <p class="paragraph">
                         Venus is the second <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a> in the <a href="solar-system.html">Solar System</a>.
-                        It is slightly smaller than <a href="earth.html">Earth</a> and is often called a "sister" planet of Earth.
+                        It is named after the Roman goddes of love and beauty. 
+                        Venus is slightly smaller than <a href="earth.html">Earth</a> and is often called our "sister" planet.
                         It is the brightest of the planets on the Earth sky, caused by the proximity to the Earth and the high albedo of the atmosphere and clouds. 
-                        Venus is named after the Roman goddes of love and beauty. 
+                        Since it is closer to the Sun than Earth, it appears as a "morning" and an "evening star". 
                     </p>
                     <p class="paragraph">
                         The atmosphere is composed almost entirely of carbon dioxide (96.5%), which heats the planet.
                         Because of this, the Venusian surface has a higher temperature than <a href="mercury.html">Mercury</a>, the closest planet to Sun. 
-                        Opaque clouds of sulfuric acid cover the planet.
+                        Opaque clouds of sulfuric acid cover the planet, obscuring the surface.
                     </p>
                     <p class="paragraph">
                         Venus is shaped by volcanism and craters.
@@ -30,6 +31,11 @@ link: venus
                         There are no moons orbiting Venus.
                         The planet also rotates against it's orbital motion, similar to <a href="uranus.html">Uranus</a>.
                         This makes the planet rotate around it's axis twice a full orbit around the Sun, the slowest of all the planets in the Solar System.
+                    </p>
+                    <p class="paragraph">
+                        The short distance from Earth allowed for numerous missions to be sent to Venus.
+                        Many Space Race missions were sent there, including the Soviet Venera and VeGa programs, and several Mariner missions by NASA.
+                        The upcoming missions VERITAS and DAVINCI+ are planned to revisit the planet.
                     </p>
                 </div>
                 <div class="articlediv">
@@ -119,17 +125,17 @@ link: venus
                     These clouds make it impossible for observation of the surface without the help of advanced instruments.
                     Venus's albedo is also high, due to the clouds.
                 </p>
-                <h2 class="paragraphheader" id="EarlyObservation">Early observation</h2>
-                <p class="paragraph">
-                    The planet is the most prominent in the night sky, appearing as a morning and evening star.
-                    It was known since ancient times and played a large role in those cultures.
-                    The Maya based their calendar partially on Venus.
-                </p>
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/diagrams/venus-phases.png" alt="Venus phases">
                         <p class="caption">Venus displays phases similar to the Moon</p>
                     </div>
+                    <h2 class="paragraphheader" id="EarlyObservation">Early observation</h2>
+                    <p class="paragraph">
+                        The planet is the most prominent in the night sky, appearing as a morning and evening star.
+                        It was known since ancient times and played a large role in those cultures.
+                        The Maya based their calendar partially on Venus.
+                    </p>
                     <p class="paragraph">
                         Galileo Galilei observed the planet through a telescope.
                         He noticed that Venus was showing phases similar to the <a href="moon.html">Moon</a>, which would prove it's proximity to the <a href="sun.html">Sun</a>.
@@ -179,3 +185,6 @@ link: venus
                         <a href="https://www.nature.com/articles/nature13072">https://www.nature.com/articles/nature13072</a>
                     </li>
                 </ul>
+                <div class="cat">
+                    {% include catplanets.html %}
+                </div>
